[gd_scene load_steps=12 format=2]

[ext_resource path="res://level/stage1/glow.png" type="Texture" id=1]
[ext_resource path="res://image/bg/bg_menu.jpg" type="Texture" id=2]
[ext_resource path="res://font/GT.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://level/stage1/stage1_1.gd" type="Script" id=4]
[ext_resource path="res://level/stage1/rock.tscn" type="PackedScene" id=5]
[ext_resource path="res://level/ball.tscn" type="PackedScene" id=6]
[ext_resource path="res://level/gate.tscn" type="PackedScene" id=7]
[ext_resource path="res://tex/glow.png" type="Texture" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/6 = true
glow_levels/7 = true
glow_intensity = 0.4
glow_blend_mode = 1
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="stage1_1" type="WorldEnvironment"]
environment = SubResource( 1 )
script = ExtResource( 4 )

[node name="ball" parent="." instance=ExtResource( 6 )]
position = Vector2( 290.068, 186.807 )

[node name="gate" parent="." instance=ExtResource( 7 )]
position = Vector2( 965.254, 525.945 )

[node name="rock1" parent="." instance=ExtResource( 5 )]
position = Vector2( 605.773, 523.11 )
rotation = 0.785398
scale = Vector2( 0.8, 0.8 )

[node name="ball_container" type="Node" parent="." groups=[
"ball_container",
]]

[node name="cam" type="Camera2D" parent="."]
position = Vector2( 640, 360 )

[node name="layer_bg" type="CanvasLayer" parent="."]
layer = -1

[node name="bg" type="Sprite" parent="layer_bg"]
position = Vector2( 640.199, 360 )
texture = ExtResource( 2 )

[node name="line_count_txt" type="Label" parent="."]
margin_left = 1108.0
margin_top = 7.0
margin_right = 1216.0
margin_bottom = 43.0
text = "0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_back" type="Button" parent="."]
margin_left = 1179.0
margin_top = 25.0
margin_right = 1256.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 2 )
toggle_mode = true
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layer_close" type="Node2D" parent="."]

[node name="btn_reset" type="Button" parent="layer_close"]
visible = false
margin_left = 518.26
margin_top = 326.179
margin_right = 607.26
margin_bottom = 399.179
custom_fonts/font = SubResource( 2 )
text = "Reset"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_next" type="Button" parent="layer_close"]
visible = false
margin_left = 668.806
margin_top = 326.179
margin_right = 749.806
margin_bottom = 399.179
custom_fonts/font = SubResource( 2 )
text = "Next"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stage_cover1" type="Sprite" parent="layer_close"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 640, -70.0401 )
scale = Vector2( 100, 1 )
texture = ExtResource( 1 )

[node name="stage_cover2" type="Sprite" parent="layer_close"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 640, 787 )
scale = Vector2( 100, 1 )
texture = ExtResource( 1 )

[node name="comet" type="Particles2D" parent="layer_close"]
position = Vector2( -117.894, 360 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
emitting = false
amount = 1
lifetime = 10.0
one_shot = true
speed_scale = 5.0
visibility_rect = Rect2( -50, -50, 100, 2000 )
process_material = SubResource( 3 )
texture = ExtResource( 8 )
[connection signal="pressed" from="btn_back" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="layer_close/btn_reset" to="." method="_on_btn_reset_pressed"]
[connection signal="pressed" from="layer_close/btn_next" to="." method="_on_btn_next_pressed"]
